fix alignment on archives page

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -10,3 +10,7 @@ body {
 .entry-title, .entry-content {
 	text-align: left;
 }
+
+#blog-archives {
+	text-align: left;
+}
